[gd_scene load_steps=2 format=3 uid="uid://ccfrurnpdlwau"]

[ext_resource type="Script" path="res://mainVideoTest.gd" id="1_ixvjd"]

[node name="TestScene" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 577.0
offset_top = 320.0
offset_right = 577.0
offset_bottom = 320.0
script = ExtResource("1_ixvjd")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(1000, 500)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_left = -385.0
offset_top = -244.0
offset_right = 375.0
offset_bottom = 231.0

[node name="LoadVideo" type="Button" parent="."]
layout_mode = 0
offset_left = -488.0
offset_top = 262.0
offset_right = -390.0
offset_bottom = 293.0
text = "Load video"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 272.0
offset_right = 76.0
offset_bottom = 303.0
text = "Play"

[node name="Stop" type="Button" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 272.0
offset_right = 146.0
offset_bottom = 303.0
text = "Stop
"

[node name="Loop" type="CheckButton" parent="."]
layout_mode = 0
offset_left = -86.0
offset_top = 273.0
offset_right = 1.0
offset_bottom = 304.0
text = "Loop"

[node name="DropDown" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 159.0
offset_right = 556.0
offset_bottom = 179.0

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="LoadVideo" to="." method="_on_load_image_pressed"]
